# etki

./: CHANGELOG.md  CLAUDE.md  Dockerfile.plugins  Etki_Plugin_Gelistirme_Plani.md  Etki_Plugin_UI_Plani.md  README.md  pyproject.toml
.github/workflows/: ci.yml  marketplace-live-verify.yml  plugin-conformance.yml
docs/: KVKK.md  RUNBOOK.md  adapters.md  compliance.md  concepts.md  getting-started.md  index.md  memory.md  writing-an-adapter.md
etki/: auth.py  config.py  kpi.py  llm_settings.py  mcp_server.py  net_guard.py  process_log.py  projects_store.py
etki/adapters/: file_work_item.py  jira_work_item.py  manifests.py  options.py  plugins.py  registry.py
etki/adapters/fakes/: intake.py
etki/api/: app.py  context.py  web.py
etki/api/templates/: ayarlar.html  intake_form.html  macros.html  market_fragment.html  plugins.html  project_detail.html  project_files.html  work_items_form.html
etki/core/: enums.py  models.py  ports.py  text.py
etki/engine/: estimation.py  triage.py
etki/extraction/: parsers.py  scope_extractor.py
etki/hitl/: service.py
etki/i18n/: catalog.py
etki/indexing/: engine.py
etki/intake/: __init__.py  __main__.py  cursors.py  respond.py  service.py
etki/persistence/: __main__.py  memory_repo.py
etki/plugin/: __init__.py  __main__.py  index_schema.py  installer.py  lockfile.py  marketplace.py  policy.py  signing.py  state.py
eval/datasets/: pilot_crs.json  quantity_crs.json
eval/datasets/etkibench/: README.md  etkibench_v0_ext.json  heldout_v3_meridian.json  heldout_v3_northwind.json
tests/integration/: test_adapter_health.py  test_hitl.py  test_intake_flow.py  test_intake_ui.py  test_marketplace_flow.py  test_plugin_install_gate.py  test_plugin_provenance.py  test_plugin_runtime.py  test_plugins_ui.py  test_ui.py  test_workitems_form.py
tests/unit/: test_api_surface.py  test_builtin_options.py  test_conformance_runner.py  test_conformance_selfcheck.py  test_decision_tree.py  test_estimation.py  test_extraction_pin.py  test_graphquery.py  test_history_unreachable.py  test_index_schema.py  test_ingest.py  test_intake_respond.py  test_intake_service.py  test_jira.py  test_kpi.py  test_linear.py  test_marketplace.py  test_mcp_plugin_tools.py  test_memory_consumers.py  test_models.py  test_persistence.py  test_plugin_cli.py  test_plugin_install_cli.py  test_plugin_installer.py  test_plugin_lockfile.py  test_plugin_policy.py  test_plugin_registry.py  test_plugin_signing.py  test_scope_extractor.py  test_text.py
